--- a/store-spec/Store.Spec.csproj
+++ b/store-spec/Store.Spec.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="fluentassertions" Version="6.12.0" />
+    <PackageReference Include="Jgs.Errors" Version="0.4.0" />
+    <PackageReference Include="Jgs.ValueObjects" Version="0.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
