--- a/store-domain-spec/Store.Domain.Spec.csproj
+++ b/store-domain-spec/Store.Domain.Spec.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\store\Store.csproj" />
+    <ProjectReference Include="..\store-domain\Store.Domain.csproj" />
   </ItemGroup>
 
 </Project>
