--- a/Store.Infrastructure.Dapper.Spec/Store.Infrastructure.Dapper.Spec.csproj
+++ b/Store.Infrastructure.Dapper.Spec/Store.Infrastructure.Dapper.Spec.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\store-domain-spec\Store.Domain.Spec.csproj" />
     <ProjectReference Include="..\store-domain\Store.Domain.csproj" />
     <ProjectReference Include="..\Store.Infrastructure.Dapper\Store.Infrastructure.Dapper.csproj" />
   </ItemGroup>
